[gd_scene load_steps=5 format=3 uid="uid://d2chtdf8dxuqd"]

[ext_resource type="Script" uid="uid://di8a3m1pyo562" path="res://scripts/components/behavior tree/trees/bosses/boss 0/boss_0_behavior_tree.gd" id="1_6rdxn"]
[ext_resource type="Script" uid="uid://dpnj54ovsacj2" path="res://scripts/components/behavior tree/nodes/composites/selector_composite.gd" id="2_cv1k4"]
[ext_resource type="Script" uid="uid://olj6dk6u7s50" path="res://scripts/components/behavior tree/nodes/decorators/conditions/in_range.gd" id="3_hkucj"]
[ext_resource type="Script" uid="uid://xjfd5lnne5rj" path="res://scripts/components/behavior tree/nodes/leaves/print_leaf.gd" id="4_go51e"]

[node name="Boss0BehaviorTree" type="Node"]
script = ExtResource("1_6rdxn")
metadata/_custom_type_script = "uid://dyaisjh31vmpr"

[node name="SelectComposite" type="Node" parent="."]
script = ExtResource("2_cv1k4")
metadata/_custom_type_script = "uid://dpnj54ovsacj2"

[node name="InRangeMelle" type="Node" parent="SelectComposite"]
script = ExtResource("3_hkucj")
distance = 400.0
metadata/_custom_type_script = "uid://olj6dk6u7s50"

[node name="PrintLeaf" type="Node" parent="SelectComposite/InRangeMelle"]
script = ExtResource("4_go51e")
string = "do melle attack"
metadata/_custom_type_script = "uid://xjfd5lnne5rj"

[node name="InRangeMid" type="Node" parent="SelectComposite"]
script = ExtResource("3_hkucj")
distance = 800.0
metadata/_custom_type_script = "uid://olj6dk6u7s50"

[node name="PrintLeaf" type="Node" parent="SelectComposite/InRangeMid"]
script = ExtResource("4_go51e")
string = "do mid"
metadata/_custom_type_script = "uid://xjfd5lnne5rj"

[node name="PrintLeaf" type="Node" parent="SelectComposite"]
script = ExtResource("4_go51e")
string = "do range attack"
metadata/_custom_type_script = "uid://xjfd5lnne5rj"
